# lasergame

./: Cargo.toml  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  deploy-page.yml
assets/models/: dot.mdl.json  laser.mdl.json  ship.mdl.json  ship.mdl.ron  test.blend  testcube.mdl.json
assets/shaders/: line_material.wgsl
src/: line_material.rs  main.rs  misc.rs  team.rs
src/assets/: mod.rs  model.rs
src/enemy/: dot.rs  mod.rs
src/enemy/behaviour/: attract.rs
src/mapgen/: cell.rs  cell_tracker.rs  generate.rs  mod.rs
src/player/: input.rs  mod.rs
src/shapes/: mod.rs
src/utils/: mod.rs
src/weapon/: bullet.rs  damage.rs  mod.rs
