[package]
name = "lasergame"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d                = "0.2.0"
bevy                   = { version = "0.15.1", features = ["dynamic_linking", "wayland", "serialize", "file_watcher"] }
bevy-inspector-egui    = "0.28.1"
bevy_egui              = "0.32.0"
leafwing-input-manager = { version = "0.16.0", features = ["egui", "timing"] }
ron                    = "0.8.1"
serde                  = { version = "1.0.217", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
