[package]
name = "lasergame"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d                = "0.2.1"
bevy                   = { version = "0.15.1", features = ["dynamic_linking", "wayland", "serialize"] }
bevy-inspector-egui    = "0.28.1"
getrandom              = { version = "0.3.1", features = ["wasm_js"] }
leafwing-input-manager = { version = "0.16.0", features = ["egui", "timing"] }
rand                   = "0.9.0"
rand_pcg               = { version = "0.9.0", features = ["os_rng"] }
rand_seeder            = "0.4.0"
ron                    = "0.8.1"
serde                  = { version = "1.0.217", features = ["derive"] }
serde_json             = "1.0.138"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false

[features]
default = ["bevy/file_watcher"]
